--- a/manifest.json
+++ b/manifest.json
@@ -13,19 +13,19 @@
     ],
     "background_color": "#4e0041",
     "theme_color": "#4e0041",
-    "main.css": "https://Shadowblazer93.github.io/SIERRA-DEMOassets/css/main.16baa3d9b04b4b097bdc.css",
-    "main.js": "https://Shadowblazer93.github.io/SIERRA-DEMOassets/js/main.79006bbc.bundle.js",
-    "main.png": "https://Shadowblazer93.github.io/SIERRA-DEMOassets/images/join_icon.bca57eba9c33f5b3e9ebf44ee31cbde8.png",
-    "assets/css/764.16baa3d9b04b4b097bdc.css": "https://Shadowblazer93.github.io/SIERRA-DEMOassets/css/764.16baa3d9b04b4b097bdc.css",
-    "assets/js/764.826d304a.bundle.js": "https://Shadowblazer93.github.io/SIERRA-DEMOassets/js/764.826d304a.bundle.js",
-    "assets/images/join_icon.png": "https://Shadowblazer93.github.io/SIERRA-DEMOassets/images/join_icon.bca57eba9c33f5b3e9ebf44ee31cbde8.png",
-    "public/favicon.ico": "https://Shadowblazer93.github.io/SIERRA-DEMOfavicon.ico",
-    "index.html": "https://Shadowblazer93.github.io/SIERRA-DEMOindex.html"
+    "main.css": ".assets/css/main.d097dd80df84c70f0ba0.css",
+    "main.js": ".assets/js/main.b83acc49.bundle.js",
+    "main.png": ".assets/images/join_icon.bca57eba9c33f5b3e9ebf44ee31cbde8.png",
+    "assets/css/889.d097dd80df84c70f0ba0.css": ".assets/css/889.d097dd80df84c70f0ba0.css",
+    "assets/js/889.bdb0471a.bundle.js": ".assets/js/889.bdb0471a.bundle.js",
+    "assets/images/join_icon.png": ".assets/images/join_icon.bca57eba9c33f5b3e9ebf44ee31cbde8.png",
+    "public/favicon.ico": ".favicon.ico",
+    "index.html": ".index.html"
   },
   "entrypoints": [
-    "assets/css/764.16baa3d9b04b4b097bdc.css",
-    "assets/js/764.826d304a.bundle.js",
-    "assets/css/main.16baa3d9b04b4b097bdc.css",
-    "assets/js/main.79006bbc.bundle.js"
+    "assets/css/889.d097dd80df84c70f0ba0.css",
+    "assets/js/889.bdb0471a.bundle.js",
+    "assets/css/main.d097dd80df84c70f0ba0.css",
+    "assets/js/main.b83acc49.bundle.js"
   ]
 }
